# plugin-sdk-rs

./: Cargo.toml  README.md  dummy_rules.yaml
examples/dummy/: Cargo.toml
examples/dummy/src/: lib.rs
sdk/: Cargo.toml
sdk/src/: common.rs  extract.rs  lib.rs  plugin.rs  source.rs
src/: bindings.rs  common.rs  extract.rs  lib.rs  macros.rs  plugin.rs  source.rs
src/api/: bindings.rs
src/macros/: common.rs  extract.rs  mod.rs  source.rs
